Input lines have been aligned, Create button has been resized and logo-bug is fixed now ^^

--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@ html {
 .body {
     width: 100%;
     font-family: 'Blinker', sans-serif;
+    margin-top: 40px;
 }
 
 .header {
-    margin-right: 10%;
-    width: 90%;
-    height: 10%;
+    width: 100%;
+    height: 40px;
 }
 
 .header-content {
-    margin: 0 25% 0 75%;
+    float:right;
     width: 300px;
     font-size: 15px;
     font-style:lighter;
@@ -45,7 +45,7 @@ button {
 }
 
 .create{
-    width: 100%;
+    width: 333px;
     height: 40px;
     padding: 6px;
     margin-bottom: 35px;
@@ -78,13 +78,9 @@ button {
 .password-img{
     background: url(https://accounts.intuit.com/IUS-Plugins/v2/images/lock-left-grey@3x.png) 0 50%/21px 21px no-repeat;
     position: relative;
-    left: 87%;
+    left: 90%;
     width: 33px;
     height: 32px;
-}
-
-.brand-logo {
-    text-align: center;
 }
 
 .icons{
@@ -109,7 +105,7 @@ button {
 .fieldset {
     margin: auto;
     padding: 20px 20px 0 20px;
-    width: 33%;
+    width: 25%;
     height: 100%;
     background-color: white;
     border: 1px solid #c7c7c7;
@@ -117,6 +113,13 @@ button {
     font-weight: lighter;
     line-height: 1.8;
 }
+
+.fieldset div{
+    margin: 0 auto;
+    width: 333px;
+    height: 36px;
+}
+
 .form-header{
     color: #4c4c4c;
     line-height: 1.1;
@@ -130,7 +133,7 @@ button {
     font-family: 'Noto Sans',sans-serif;
     font-size: 14px;
     display: block;
-    margin: 0;
+    margin: 0 auto;
 }
 
 a:link,
@@ -143,6 +146,17 @@ a:active{
 
 a:hover{
     color: #0014c5;
+}
+
+.brand-logo{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+}
+
+.brand-logo a{
+    display: inline-block;
+    height: 50px;
 }
 
 .form-end {
@@ -179,6 +193,7 @@ p {
 
 pre {
     text-align: center;
+    height: 70px;
 }
 
 input {
@@ -189,7 +204,7 @@ input {
     width: 333px;
     height: 34px;
     padding: 0;
-    text-align: center;
+    text-align: left;
 }
 
 input:focus{
@@ -199,4 +214,6 @@ input:focus{
 label{
     color: #4c4c4c;
     margin-bottom: 5px;
+    width: 333px;
+    height: 36px;
 }
